[#96] Fix for issue#96-new metadata element variable description was added.

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/read.html
@@ -242,6 +242,10 @@
 				<div class="tab-pane" id="varmethTab">
 					<table class="table  table-condensed table-no-border-top">
 						<tbody>
+                            <tr>
+								<th scope="row" class="dataset-label">{{ _("Variable description") }}</th>
+								<td class="dataset-details">{{ pkg_dict.custom_meta.variable_description }}</td>
+							</tr>
 							<tr>
                               <th scope="row" class="dataset-label">{{ _("Observed Variables") }}</th>
                               <td class="dataset-details" ></td>
