[#95] Fix for issue#95-add link for data publication tutorials on home page- minor changes

--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/home/index.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/home/index.html
@@ -69,9 +69,9 @@
             <span><h3 style="text-align: center">Data Publication Tutorials</h3></span>
         </a>
         <div>
-            <p style="margin-left: 10px">
+            <p style="margin-left: 10px; margin-right: 10px">
                 View tutorial videos explaining the iUTAH data publication process including how to use the Data Publication System
-                to search for, discover and access datasets and demonstrating how to submit metadata and data to the Repository.
+                to search for, discover, and access datasets and demonstrating how to submit metadata and data to the Repository.
             </p>
 
         </div>
