--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/location_fields.html
@@ -15,7 +15,7 @@
 		</span>
 	</div>
 
-	<div id="spatialDiv" class="panel-collapse collapse out">
+	<div id="spatialDiv" class="panel-collapse collapse in">
 		<div style="margin-top: 20px">
 			{{ form.input('spatial', label=_('Spatial Coverage'), id='field-spatial', placeholder=_('e.g., Salt Lake County'), value=data.custom_meta.spatial, error=errors.spatial, classes=['control-medium'], attrs={'title': 'Spatial coverage of the dataset.'}) }}
 		</div>
