[#88] Fix for issue#88- Implemented code for google analytics - but need testing to see if it works

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_item.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_item.html
@@ -47,7 +47,7 @@
         {% endif %}
       </li>
       <li>
-        <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
+        <a onclick="_gaq.push(['_trackEvent','Download','{{ res.format }}',this.href]);" href="{{ res.url }}" class="resource-url-analytics" target="_blank">
           {% if res.can_be_previewed %}
             <i class="icon-download"></i>
             {{ _('Download') }}
