[#100] Typo fix for issue#100

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_form.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/resource_form.html
@@ -5,7 +5,7 @@
     <span class="info-block info-block-small" style="margin-left: 100px" >
         <i class="icon-info-sign" ></i>
         <p>
-            {{ _('Metadata may be submitted without any resources. File upload size is limited to 2 GB. Please use a pdf format for documents and a csv format for table-based data. These file types increase portability and permits preview on the repository.')}}
+            {{ _('Metadata may be submitted without any resources. File upload size is limited to 2 GB. Please use a pdf format for documents and a csv format for table-based data. These file types increase portability and permit preview on the repository.')}}
         </p>
     </span>
   {% endblock %}
