[#105] fix for broken links

--- a/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/mdf_header.html
+++ b/src/ckanext-mdftemplate/ckanext/mdftemplate/templates/mdf_header.html
@@ -25,23 +25,23 @@
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-hover="dropdown" href="http://data.iutahepscor.org/mdf/Development/">Development <b class="caret"></b></a>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                <li><a href="http://data.iutahepscor.org/mdf/Development/Software%20Development/">Software Development </a></li>
-                                <li><a href="http://data.iutahepscor.org/mdf/Development/Hardware%20Development/">Hardware Development </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/Development/Software_Development/">Software Development </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/Development/Hardware_Development/">Hardware Development </a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-hover="dropdown">Data <b class="caret"></b></a>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                <li><a href="http://data.iutahepscor.org/mdf/Data/Gamut%20Network%20Overview/">Gamut Network Overview </a></li>
-                                <li><a href="http://data.iutahepscor.org/mdf/Data/Logan%20River/">Logan River </a></li>
-                                <li><a href="http://data.iutahepscor.org/mdf/Data/Provo%20River/">Provo River </a></li>
-                                <li><a href="http://data.iutahepscor.org/mdf/Data/Red%20Butte%20Creek/">Red Butte Creek </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/Data/Gamut_Network/">Gamut Network Overview </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/Data/Logan_River/">Logan River </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/Data/Provo_River/">Provo River </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/Data/Red_Butte/">Red Butte Creek </a></li>
                             </ul>
                         </li>
                         <li class="dropdown"><a class="dropdown-toggle" data-hover="dropdown">About <b class="caret"></b></a>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                                 <li><a href="http://data.iutahepscor.org/mdf/About/Documentation/">Documentation </a></li>
-                                <li><a href="http://data.iutahepscor.org/mdf/About/Training%20Materials/">Training Materials </a></li>
+                                <li><a href="http://data.iutahepscor.org/mdf/About/Training_Materials/">Training Materials </a></li>
                                 <li><a href="http://data.iutahepscor.org/mdf/About/Personnel/">Personnel </a></li>
                             </ul>
                         </li>
