[#98] more fix for bug#98. private dataset not listed anymore

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/group/read.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/group/read.html
@@ -12,7 +12,7 @@
         {% endif %}
     {% endfor %}
 
-    {{ h.snippet('snippets/package_list.html', packages=filtered_items) }}
+    {{ h.snippet('snippets/package_list.html', packages=filtered_items, user=c.userobj) }}
 
   {% endif %}
 {% endblock %}
