--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/creator_fields.html
@@ -52,12 +52,21 @@
                 </a>
             </div>
             <br>
+            <span title="Name of the dataset creator.">
             {{ form.input(creator_name_field, label=_('*Name'), id='field-creators-%d-name' % index, placeholder=_('e.g., John Doe'), value=creator_name, error=name_error, classes=['control-medium'], attrs={'title': 'Name of the dataset creator.'}) }}
+            </span>
+            <span title="Creator's email address.">
             {{ form.input(creator_email_field, label=_('Email'), id='field-creators-%d-email' % index, placeholder=_('e.g., john@university.edu'), value=creator_email, error=email_error, classes=['control-medium'], attrs={'title': "Creator's email address."}) }}
+            </span>
+            <span title="Creator's main phone number.">
             {{ form.input(creator_phone_field, label=_('Phone'), id='field-creators-%d-phone' % index, placeholder=_('e.g., 435-799-0000'), value=creator_phone, error=phone_error, classes=['control-medium'], attrs={'title': "Creator's main phone number."}) }}
+            </span>
+            <span title="Creator's physical address.">
             {{ form.input(creator_address_field, label=_('Address'), id='field-creators-%d-address' % index, placeholder=_('e.g., 100 Old Main Hill, Logan, UT 84322-8200'), value=creator_address, error=address_error, classes=['control-medium'], attrs={'title': "Creator's physical address."}) }}
+            </span>
+            <span title="Creator's home organization.">
             {{ form.input(creator_organization_field, label=_('Organization'), id='field-creators-%d-organization' % index, placeholder=_('e.g., Utah Water Research Laboratory'), value=creator_organization, error=org_error, classes=['control-medium'], attrs={'title': "Creator's home organization."}) }}
-
+            </span>
             {#  { form.checkbox(creator_is_a_group_field, label=_('Select if this is the name of a group of people rather than the name of an individual'), id='field-creators-%d-is_a_group' % index, placeholder='', value=creator_is_a_group, checked=creator_is_a_group_checked, error='', classes=['control-medium'], attrs={'title': "Select if the ceator is a group and not a person."}) }#}
             <label class="checkbox" for='field-creators-{{ loop.index0 }}-is_a_group'>
                 {%  if creator_is_a_group_checked %}
