--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
@@ -41,9 +41,13 @@
         {%  set name_class = "add-on" %}
       {% endif %}
       <div class="input-prepend" id="variable_{{ loop.index0 }}" >
+          <span title="Variables that are measured, recorded, reported, or observed within the dataset. The list may be extensive.">
           <label for="{{ 'field-variables-%d-name' % loop.index0 }}" class={{ name_class }}>Name</label>
+          </span>
           <input id="{{ 'field-variables-%d-name' % loop.index0 }}" type="text" name="{{ variable_name_field}}" value="{{ variable.name | empty_and_escape }}" placeholder="e.g., temperature" title="Variables that are measured, recorded, reported, or observed within the dataset. The list may be extensive." />
+          <span title="The units of measure associated with a variable.">
           <label for="{{ 'field-variables-%d-unit' % loop.index0 }}" class="add-on" >Unit</label>
+          </span>
           <input id="{{ 'field-variables-%d-unit' % loop.index0 }}" type="text" name="{{ variable_unit_field }}" value="{{ variable.unit | empty_and_escape }}" placeholder="e.g., deg C" title="The units of measure associated with a variable."/>
           <button id="btn_{{ loop.index0 }}_delete_variable" class="btn btn-danger" type="button" style="width: 113px;"><i class="icon-remove-circle"></i>Delete</button>
           <input id="field-variables-{{ loop.index0 }}-delete"
@@ -70,11 +74,14 @@
 	</div>
 	<div id="vmDiv" class="panel-collapse collapse in">
 		<div style="margin-top: 20px">
+            <span title="The methods used to generate, create, collect, or produce the data.">
 			{{ form.markdown('data_collection_method', label=_('Data Collection Method'), id='field-data_collection_method', placeholder=_('e.g., Water temperature measured using a YSI EXO sonde instantaneously every 15 minutes. Values logged using a Campbell Scientific datalogger and streamed to iUTAH servers.'), value=data.custom_meta.data_collection_method, error=errors.data_collection_method,  attrs={'title': 'The methods used to generate, create, collect, or produce the data.'} )}}
-		</div>
-
+		    </span>
+        </div>
+        <span title="The methods and programs used and specific steps undertaken to process the data.">
 		{{ form.markdown('data_processing_method', label=_('Data Processing Method'), id='field-data_processing_method', placeholder=_('e.g., Quality control and post processing conducted using ODM tools to account for anomalous values.'), value=data.custom_meta.data_processing_method, error=errors.data_processing_method,  attrs={'title': 'The methods and programs used and specific steps undertaken to process the data.'} )}}
-	</div>
+	    </span>
+    </div>
 </div>
 {% endblock package_variable_metadata %}
 
